[gd_scene load_steps=15 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy/Watermelon.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://enemy/Bacon.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy/Hourglass.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -5.0
margin_top = -4.0
margin_right = 482.0
margin_bottom = 725.0
color = Color( 0.0759, 0.33, 0.08437, 1 )

[node name="Labels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="Labels"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="HighScore" type="Label" parent="Labels"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
align = 2

[node name="GoLabel" type="Label" parent="Labels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Go!"
align = 1
valign = 1

[node name="GameTimerLabel" type="Label" parent="Labels"]
anchor_right = 1.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 2

[node name="FinalScore" type="Label" parent="Labels"]
visible = false
anchor_right = 1.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 2

[node name="NewHighScore" type="Label" parent="Labels"]
visible = false
anchor_right = 1.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 8 )
text = "New High Score!"
align = 1
valign = 2

[node name="Retry" type="Label" parent="Labels"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -254.0
custom_fonts/font = SubResource( 9 )
text = " Again?
Y/N"
align = 1

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="WatermelonTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="EnemySpawnPoint" type="PathFollow2D" parent="EnemyPath"]

[node name="BaconTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="GameStartCountdownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Hourglass" parent="." instance=ExtResource( 6 )]
position = Vector2( 566, 671 )

[node name="Watermelon" parent="." instance=ExtResource( 2 )]
position = Vector2( 612, 666 )

[node name="Bacon" parent="." instance=ExtResource( 5 )]
position = Vector2( 522, 670 )

[node name="GameTimer" type="Timer" parent="."]

[node name="HourglassTimer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="tree_exiting" from="." to="." method="_on_Main_tree_exiting"]
[connection signal="timeout" from="WatermelonTimer" to="." method="_on_WatermelonTimer_timeout"]
[connection signal="timeout" from="BaconTimer" to="." method="_on_BaconTimer_timeout"]
[connection signal="timeout" from="GameStartCountdownTimer" to="." method="_on_GameStartCountdownTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="HourglassTimer" to="." method="_on_HourglassTimer_timeout"]
